unpackaged/main/default/objects/conference360__Table__c/fields/conference360__Account__c.field-meta.xml
<CustomField>
    <fullName>conference360__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Account related to this Table.</description>
    <inlineHelpText>The Account related to this Table.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Tables</relationshipLabel>
    <relationshipName>Tables</relationshipName>
    <type>Lookup</type>
</CustomField>