unpackaged/main/default/objects/conference360__Table__c/fields/conference360__Event__c.field-meta.xml
<CustomField>
    <fullName>conference360__Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Event related to this Table.</description>
    <inlineHelpText>The Event related to this Table.</inlineHelpText>
    <label>Event</label>
    <referenceTo>conference360__Event__c</referenceTo>
    <relationshipLabel>Tables</relationshipLabel>
    <relationshipName>Tables</relationshipName>
    <type>Lookup</type>
</CustomField>