unpackaged/main/default/objects/conference360__Table__c/fields/conference360__Main_Contact__c.field-meta.xml
<CustomField>
    <fullName>conference360__Main_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The main Contact for this Table. If the Attendee lookup is set and there is a Contact related to the Attendee, the Contact will be auto-populated.</description>
    <inlineHelpText>The main Contact for this Table. If the Attendee lookup is set and there is a Contact related to the Attendee, the Contact will be auto-populated.</inlineHelpText>
    <label>Main Contact (Contact)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Tables</relationshipLabel>
    <relationshipName>Tables</relationshipName>
    <type>Lookup</type>
</CustomField>