unpackaged/main/default/objects/conference360__Table__c/fields/conference360__Session__c.field-meta.xml
<CustomField>
    <fullName>conference360__Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Session</label>
    <referenceTo>conference360__Session__c</referenceTo>
    <relationshipLabel>Tables</relationshipLabel>
    <relationshipName>Tables</relationshipName>
    <type>Lookup</type>
</CustomField>