unpackaged/main/default/objects/conference360__Table__c/validationRules/conference360__Table_Has_No_Seats_Available.validationRule-meta.xml
<ValidationRule>
    <fullName>conference360__Table_Has_No_Seats_Available</fullName>
    <active>true</active>
    <description>Table_Has_No_Seats_Available</description>
    <errorConditionFormula>IF( AND(NOT(ISNEW()),  ISCHANGED(conference360__Seats_Assigned__c) ), conference360__Seats_Assigned__c &gt;  conference360__Total_Seats__c, false)</errorConditionFormula>
    <errorMessage>Unable to assign a seat: This table is fully occupied.</errorMessage>
</ValidationRule>